Colliding isinf/isnan between C99 and C++11 with GCC >=4.6 https://bugs.webkit.org/show_bug.cgi?id=59249

Patch by Allan Sandfeld Jensen <allan.jensen@nokia.com> on 2012-05-21
Reviewed by Darin Adler.

Workaround the isinf and isnan conflict in GCC C++11.

* wtf/Compiler.h:
* wtf/MathExtras.h:
(std::wtf_isinf):
(std::wtf_isnan):

Canonical link: https://commits.webkit.org/104668@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117779 268f45cc-cd09-0410-ab3c-d52691b4dbfc